--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -78,10 +78,11 @@ Explicit negation also allows us to deal with more exotic control flow than ``to
 Our form of negation is useful for describing that a particular solution is minimal (\S~\ref{bitr:sec:circ}), and avoiding the computation of non-minimal solutions.
 
 \noindent\textbf{External Code.}
-Access to external code important to allow the use of already existing analysis code, such as BAP~\cite{bap} lifting and ELF parsing.
+Datalog systems use external predicates to allow programmers to specify functionality outside the catalog programming language.
+Access to external code is important to allow the use of already existing analysis code, such as BAP~\cite{bap} lifting and ELF parsing.
+We allow a more limited form of external predicates we call \emph{callbacks}.
 The use of callbacks as opposed to external predicates to more easily implement the engine (\S~\ref{holmes:sec:implcall}).
 It also allows us to utilize traditional imperative data structures, such as hash tables, during the implementation of performance critical analyses (\S~\ref{chap:alias}).
-These analyses together allow the implementation of a real security analysis (use-after-free, \S~\ref{chap:alias}).
 
 We investigated our thesis statement by designing and implementing \sysname, a logic language engine designed for the integration of binary analyses.
 BiTR (\S~\ref{chap:bitr}) inspired this design.
@@ -91,7 +92,7 @@ This adaptation allows Holmes to resolve an output even in the case of a negatio
 This is concretely the case in the use of VSA to resolve function pointers.
 We also investigated different implementation approaches for \sysname (\S~\ref{holmes:sec:impl}).
 
-We provide a formal semantics for our logic language (\S~\ref{chap:formal}).
+We provide a formal semantics for the Holmes logic language (\S~\ref{chap:formal}).
 These semantics enhance the ability to reason about the results of an analysis by formally constraining what derivations the analysis engine may follow.
 They also make it possible to determine compliance for alternative implementations of the engine, potentially allowing programs to run on backends other than the initial one written for this thesis.
 
