--- a/thesis/formal/syms.tex
+++ b/thesis/formal/syms.tex
@@ -3,7 +3,7 @@
 \newcommand{\cons}[1]{C(#1)}
 \newcommand{\decides}{\triangleleft}
 % NFI = no force inconsistent
-\newcommand{\nfi}[2]{{#1} \triangleleft^? {#2}}
+%\newcommand{\nfi}[2]{{#1} \triangleleft^? {#2}}
 \newcommand{\world}[1]{W({#1})}
 \newcommand{\stepass}{\leadsto}
 \newcommand{\circset}{R}
