--- a/thesis/ll.tex
+++ b/thesis/ll.tex
@@ -7,4 +7,4 @@
 \newcommand{\cac}{\leadsto}
 \newcommand{\imp}{\rightarrow}
 \newcommand{\dia}{\diamond}
-\newcommand{\boks}{\square}
+%\newcommand{\boks}{\square}
